frontend/src/styles/pages.scss
/* ... */
.highschool__contactPersonName {
	font-weight: bold;
}


/* HOMEPAGE */

.homepage__subheading {
	display: flex;
	align-items: center;
	color: var(--hb-colors-emphasizing);
	max-inline-size: 12rem;
	margin-inline: auto;
	margin-block-end: 1rlh;
}
.homepage__subheading::before,
.homepage__subheading::after {
	content:"";
	display: block;
	margin-block-start: -3px;
	inline-size: 3rem;
	block-size: 1px;
	background-color: var(--hb-colors-emphasizing);
}
.homepage__subheading::before {
	margin-inline-end: 0.5rlh;
}
.homepage__subheading::after {
	margin-inline-start: 0.5rlh;
}
.homepage-related .related-heading {
	margin-block-end: 0.5rlh !important;
	text-align: center;
}


/* NEWS */

.news {
	max-width: 28rem;
}
.news a:hover {
	color: inherit !important;
}

.news__item-heading {
	line-height: 1.1;
}
.news:not(.news--single) .news__item-heading {
	// overwrite global h2 rules
	font-size: 1.3em !important;
	transition: color 200ms linear;
}
.news__link:hover .news__item-heading {
	color: var(--hb-colors-emphasizing);
}

.news__item-date {
	margin-block-start: -0.3em;
	font-size: 0.75em;
}
.news--single .news__item-date {
	margin-block-start: -0.5em;
}

@media (settings.$header-breakpoint-navigationHiddenToVisible-hidden-until) {
	.news__item-content {
		display: flex;
		flex-direction: column;
	}
}

@media (settings.$header-breakpoint-navigationHiddenToVisible-hidden-until) {
	.news__item-coverImage {
		order: 1;
		max-width: 15em;
	}
}
@media (header-breakpoint-navigationHiddenToVisible-visible-from) {
	.news__item-coverImage {
		float: right;
		max-width: 11em;
		margin-inline-start: 0.5rlh;
		margin-block-end: 0.5rlh;
	}
}

.news__item-moreLink {
	font-size: 0.85em;
	transition: color 200ms linear;
}
.news__link:hover .news__item-moreLink {
	color: var(--hb-colors-text);
}


/* PREVIEW */

.preview p,
.preview ul {
	margin-block-end: 2em;
}

.preview figure {
	margin-block-end: 3em;
}


/* PRILEZITOST */

.prilezitost h1 {
	margin-block-end: 0;
	line-height: 1.1;
}

.prilezitost__labels {
	vertical-align: middle;
	margin-inline-start: -0.25rlh;
	justify-content: center;
}
@media (settings.$typography-breakpoint-small-until) {
	.prilezitost__labels {
		display: inline-flex;
	}
}
.prilezitost__label {
	background-color: var(--hb-colors-links);
	font-size: 0.5em;
	font-weight: initial;
}
@media (settings.$typography-breakpoint-large-from) {
	.prilezitost__label {
		font-size: 0.4em;
	}
}

.prilezitost__top {
	margin-block-start: 1rlh;
	display: flex;
	flex-direction: column;
	justify-content: space-between;
	background-color: var(--hb-colors-tinge);
	border-radius: 2em;
	overflow: hidden;
}
@media (settings.$header-breakpoint-navigationHiddenToVisible-hidden-until) {
	.prilezitost__top {
		max-width: 20rem;
	}
}
@media (settings.$header-breakpoint-navigationHiddenToVisible-visible-from) {
	.prilezitost__top {
		flex-direction: row;
		gap: 1rlh;
		align-items: center;
	}
}
@media (settings.$typography-breakpoint-small-until) {
	.prilezitost__top {
		max-width: 30rem;
	}
}
@media (settings.$typography-breakpoint-large-from) {
	.prilezitost__top {
		margin-block-start: 2rlh;
		max-width: 35rem;
		min-height: 15rem;
		margin-inline: auto;
	}
}

@media (settings.$header-breakpoint-navigationHiddenToVisible-hidden-until) {
	.prilezitost__image {
		border-bottom: 2px solid var(--hb-colors-emphasizing);
	}
}
@media (settings.$header-breakpoint-navigationHiddenToVisible-visible-from) {
	.prilezitost__image {
		flex-basis: 50%;
		align-self: stretch;
		border-left: 2px solid var(--hb-colors-emphasizing);
	}
}

.prilezitost__image img {
	min-height: 100%;
	max-height: 15rem;
	width: 100%;
	object-fit: cover;
}

.prilezitost dl {
	margin: 0;
}
.prilezitost dd {
	margin-inline-start: 0;
}

.prilezitost__basic {
	padding: 1rlh;
}
@media (settings.$header-breakpoint-navigationHiddenToVisible-visible-from) {
	.prilezitost__basic {
		order: -1;
	}
}
@media (settings.$header-breakpoint-navigationHiddenToVisible-hidden-until) {
	.prilezitost__basic {
		max-width: max-content;
	}
}
@media (settings.$header-breakpoint-navigationHiddenToVisible-hidden-until), (settings.$typography-breakpoint-large-from) {
	.prilezitost__basic {
		display: grid;
		grid-template-columns: auto auto;
		gap: 0.5rlh 1rlh;
	}
}
.prilezitost__basic dt {
	font-weight: bold;
}
@media (settings.$header-breakpoint-navigationHiddenToVisible-visible-from) and (settings.$typography-breakpoint-small-until) {
	.prilezitost__basic dt:not(:first-child) {
		margin-block-start: 0.5rlh;
	}
}
@media (settings.$header-breakpoint-navigationHiddenToVisible-hidden-until), (settings.$typography-breakpoint-large-from) {
	.prilezitost__basic dt {
		text-align: right;
	}
}

.prilezitost section {
	margin-block-start: 2rlh;
}
@media (settings.$detail-breakpoint-large-from) {
	.prilezitost section {
		max-width: 60ch;
	}
}
@media (settings.$typography-breakpoint-large-from) {
	.prilezitost section {
		max-width: 55ch;
		margin-inline: auto;
	}
}

.prilezitost p:not(:last-child) {
	margin-block-end: 0.5rlh;
}

.prilezitost__contact {
	background-color: var(--hb-colors-tinge);
	padding: 1rlh;
	margin-inline: -1rlh !important; // overwrite more generic rule from above
}
@media (settings.$header-breakpoint-navigationHiddenToVisible-visible-from) {
	.prilezitost__contact {
		border-radius: 2rem;
	}
}
@media (settings.$header-breakpoint-navigationHiddenToVisible-visible-from) and (settings.$typography-breakpoint-small-until) {
	.prilezitost__contact {
		max-width: 30rem;
	}
}
@media (settings.$typography-breakpoint-large-from) {
	.prilezitost__contact {
		flex-direction: column;
		text-align: center;
		padding-block: 2rlh;
	}
}
.prilezitost__contact dt {
	position: absolute;
	display: block;
	width: 0;
	height: 0;
	opacity: 0;
	pointer-events: none;
}
.prilezitost__contact dd:not(:last-child) {
	margin-block-end: 0.25rlh;
}
.prilezitost__email,
.prilezitost__phone {
	display: inline-flex;
	align-items: center;
	gap: 0.25rlh;
}
/* ... */

